# Pim

./: .gitignore  Cargo.toml  README.md  mining.org
src/: data.rs  io.rs  lib.rs  main.rs  miner.rs  model.rs
src/benchmarks/: database.rs
src/data/: linked_trie.rs  skip_graph.rs
src/data/linked_trie/: edge_list.rs  edge_list2.rs  skip_graph.rs
src/model/: bernoulli.rs
src/model/bernoulli/: serialize.rs
