[package]
name = "trans_mine"
version = "0.1.0"
edition = "2021"

[lib]
name = "transmine"
version = "0.1.0"
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
bit-vec = "0.6.3"
statrs = "0.16.0"
tracing = "0.1.40"
