[package]
name = "trans_mine"
version = "0.1.0"
edition = "2021"

[lib]
name = "transmine"
version = "0.1.0"
path = "src/lib.rs"
crate-type = ["lib"]

[profile.release]
debug = 1
debuginfo-level = 1

[[bin]]
name = "miner"
path = "src/main.rs"

[[bin]]
name = "db_bench"
path = "src/benchmarks/database.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
bit-vec = "0.6.3"
clap = { version = "4.4.8", features = ["derive"] }
rand = "0.8.5"
rayon = "1.8.0"
rustc-hash = "1.1.0"
statrs = "0.16.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
